--- a/index.html
+++ b/index.html
@@ -89,33 +89,11 @@ https://templatemo.com/tm-528-elegance
                                                 <span>About Me</span>
                                                 <h2>Who am i?</h2>
                                                 <p>I'm an 18-year-old innovator and rising AI engineer. </p>
-                                                <p>My goal is to leverage AI and other emerging technologies, such as quantum computing, to solve some of our world’s biggest challenges in climate change, manufacturing, and other industries.</p>
-                                            </div>
-                                            <div class="facts-list owl-carousel">
-                                                <div class="item animate" data-animate="fadeInUp">
-                                                    <div class="counter-box">
-                                                        <i class="fa fa-globe counter-icon" aria-hidden="true"></i><span class="count-number">Activator</span> The Knowledge Society
-                                                    </div>
-                                                </div>
-                                                <div class="item animate" data-animate="fadeInUp">
-                                                    <div class="counter-box">
-                                                        <i class="fa fa-graduation-cap counter-icon" aria-hidden="true"></i><span class="count-number">Fellow</span> Make an Impact Fellowship
-                                                    </div>
-                                                </div>
-                                                <div class="item animate" data-animate="fadeInUp">
-                                                    <div class="counter-box">
-                                                        <i class="fa fa-desktop counter-icon" aria-hidden="true"></i><span class="count-number">Fellow</span> HeadstarterAI
-                                                    </div>
-                                                </div>
-                                                <div class="item animate" data-animate="fadeInUp">
-                                                    <div class="counter-box">
-                                                        <i class="fa fa-pencil counter-icon" aria-hidden="true"></i><span class="count-number">Writer</span> LatinX in AI
-                                                    </div>
-                                                </div>
+                                                <p>My goal is to leverage AI and other emerging technologies to solve some of our world’s biggest challenges in climate change, manufacturing, and other industries. I'm currently a freshman studying software engineering at Universidad de Las Américas. I’ve worked on AI projects ranging from climate change to manufacturing. </p>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-md-5">
                                         <figure class="about-img animate" data-animate="fadeInUp"><img src="images/profile.JPG" class="rounded" alt=""></figure>
                                     </div>
                                 </div>
@@ -135,6 +113,64 @@ https://templatemo.com/tm-528-elegance
                             </div>
                             <div class="gallery-section">
                                 <div class="gallery-list owl-carousel">
+
+                                    <!--Crop AI-->
+                                    <div class="item animate" data-animate="fadeInUp">
+                                        <div class="portfolio-item">
+                                            <div class="thumb">
+                                                <img src="images/crop.jpeg" alt="">
+                                            </div>
+                                            <div class="thumb-inner animate" data-animate="fadeInUp">
+                                                <h4>Crop AI</h4>
+                                                <p>Smart crop planning and care with AI</p>
+                                                <p><a href="https://github.com/gabrielapadilla06/optimal-crop">Code</a></p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!--Image 3D-->
+                                    <div class="item animate" data-animate="fadeInUp">
+                                        <div class="portfolio-item">
+                                            <div class="thumb">
+                                                <img src="images/image3d.jpeg" alt="">
+                                            </div>
+                                            <div class="thumb-inner animate" data-animate="fadeInUp">
+                                                <h4>Image 3D</h4>
+                                                <p>Generating 3D models from a single image using Stability AI Stable Fast 3D model.</p>
+                                                <p><a href="https://github.com/gabrielapadilla06/3d-images">Code</a></p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!--Food AI-->
+                                    <div class="item animate" data-animate="fadeInUp">
+                                        <div class="portfolio-item">
+                                            <div class="thumb">
+                                                <img src="images/food.jpeg" alt="">
+                                            </div>
+                                            <div class="thumb-inner animate" data-animate="fadeInUp">
+                                                <h4>Food AI</h4>
+                                                <p>Creating the next generation of sustainable food</p>
+                                                <p><a href="https://github.com/gabrielapadilla06/foodai">Code</a></p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!--WorldBio-->
+                                    <div class="item animate" data-animate="fadeInUp">
+                                        <div class="portfolio-item">
+                                            <div class="thumb">
+                                                <img src="images/worldbio.png" alt="">
+                                            </div>
+                                            <div class="thumb-inner animate" data-animate="fadeInUp">
+                                                <h4>WorldBio</h4>
+                                                <p>Preserving Nature, One Drawing at a Time</p>
+                                                <p><a href="https://worldbio.vercel.app/">Code</a> </p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!--CNN for quality control-->
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="portfolio-item">
                                             <div class="thumb">
@@ -147,18 +183,8 @@ https://templatemo.com/tm-528-elegance
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="item animate" data-animate="fadeInUp">
-                                        <div class="portfolio-item">
-                                            <div class="thumb">
-                                                <img src="images/food.jpeg" alt="">
-                                            </div>
-                                            <div class="thumb-inner animate" data-animate="fadeInUp">
-                                                <h4>Optimal Crop Recommender</h4>
-                                                <p>Using Random Forest Classifier to recommend the optimal crop based on the soil parameters.</p>
-                                                <p><a href="https://colab.research.google.com/drive/1LJTwtLAjiYFfAr1DsJ74b75Po8MVlrIu?usp=sharing">Code</a> | <a href="https://medium.com/insights-of-nature/optimal-crop-recommendation-using-a-random-forest-classifier-e2de0b77c7f7">Article</a></p>
-                                            </div>
-                                        </div>
-                                    </div>
+
+                                    <!--Corals Classifier-->
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="portfolio-item">
                                             <div class="thumb">
@@ -171,6 +197,8 @@ https://templatemo.com/tm-528-elegance
                                             </div>
                                         </div>
                                     </div>
+
+                                    <!--Smart Forest Guard-->
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="portfolio-item">
                                             <div class="thumb">
@@ -183,6 +211,22 @@ https://templatemo.com/tm-528-elegance
                                             </div>
                                         </div>
                                     </div>
+
+                                    <!--Space Cleanup-->
+                                    <div class="item animate" data-animate="fadeInUp">
+                                        <div class="portfolio-item">
+                                            <div class="thumb">
+                                                <img src="images/space.jpg" alt="">
+                                            </div>
+                                            <div class="thumb-inner animate" data-animate="fadeInUp">
+                                                <h4>Space Cleanup</h4>
+                                                <p>Educational video game to raise awareness about the impact of space debris accumulation.</p>
+                                                <p><a href="https://github.com/gabrielapadilla06/SpaceCleanup">Code</a></p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!--Full portfolio-->
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="portfolio-item">
                                             <div class="thumb">
